...
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="20dp"
                android:layout_weight="1">

                <RadioGroup
                    android:id="@+id/radioGroupLoginType"
                    android:layout_width="300dp"
                    android:layout_height="180dp"
                    android:layout_marginEnd="2dp"

                    android:layout_marginStart="2dp"
                    android:background="@drawable/custombtn1"
                    android:paddingEnd="5dp"
                    android:paddingStart="40dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent">

                    <RadioButton
                        android:id="@+id/radioStudent"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="1dp"
                        android:layout_marginStart="1dp"
                        android:layout_marginTop="1dp"
                        android:layout_weight="1"
...
