...

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.gms.common.SignInButton
                    android:id="@+id/signIn"
                    android:layout_width="200dp"
                    android:layout_height="100dp"
                    android:padding="2dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
...
