<resources>
    <string name="app_name">GueStay</string>
    <string name="student">Student</string>
    <string name="faculty_staff">Faculty/Staff</string>
    <string name="admin">Admin</string>
    <string name="imgdetails">IIITD</string>
    <string name="check_availability">Check Availability</string>


    <string name="check_in">Check-in \n</string>

    <string name="check_out">Check-out \n</string>
    <string name="associated_room_id">Room(s) \n</string>
...
