<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgrnd"
    tools:context="in.ac.iiitd.guestacc.UserHomeActivity">



    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:id="@+id/linearLayoutParent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"

            android:layout_marginTop="8dp"
            android:orientation="vertical"
            android:padding="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:orientation="horizontal">

                <EditText

                    android:id="@+id/editTextFrom"
                    style="@style/Widget.AppCompat.Button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"

                    android:background="@drawable/custombuttondesc"
                    android:clickable="true"
                    android:cursorVisible="false"

                    android:focusable="false"
                    android:inputType="textMultiLine"
                    android:lines="2"

                    android:minLines="2"
                    android:paddingEnd="10dp"
                    android:paddingStart="10dp"
                    android:textAllCaps="false"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/editTextTo"
                    style="@style/Widget.AppCompat.Button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:layout_weight="1"
                    android:background="@drawable/custombuttondesc"
                    android:clickable="true"
                    android:cursorVisible="false"

                    android:focusable="false"
                    android:inputType="textMultiLine"
                    android:lines="2"

                    android:minLines="2"
                    android:paddingEnd="10dp"
                    android:paddingStart="10dp"
                    android:textAllCaps="false"
                    android:textSize="15sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/editTextRoom"
                    style="@style/Widget.AppCompat.Button"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/custombuttondesc"

                    android:clickable="true"
                    android:cursorVisible="false"
                    android:focusable="false"
                    android:inputType="textMultiLine"

                    android:lines="2"
                    android:minLines="2"

                    android:paddingEnd="10dp"
                    android:paddingStart="10dp"
                    android:text="@string/associated_room_id"
                    android:textAlignment="center"

                    android:textAllCaps="false"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/editTextMaleCount"
                    style="@style/Widget.AppCompat.Button"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/custombuttondesc"
                    android:clickable="true"
                    android:cursorVisible="false"

                    android:focusable="false"
                    android:inputType="textMultiLine"
                    android:lines="2"
                    android:minLines="2"

                    android:paddingEnd="10dp"
                    android:paddingStart="10dp"
                    android:text="@string/male"
                    android:textAllCaps="false"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/editTextFemaleCount"
                    style="@style/Widget.AppCompat.Button"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/custombuttondesc"
                    android:clickable="true"
                    android:cursorVisible="false"
                    android:focusable="false"

                    android:inputType="textMultiLine"
                    android:lines="2"
                    android:minLines="2"

                    android:paddingEnd="10dp"
                    android:paddingStart="10dp"
                    android:text="@string/female"

                    android:textAlignment="center"
                    android:textAllCaps="false"
                    android:textSize="15sp" />

            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnCheckAvail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"


                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:text="@string/let_s_go"
                    android:textAllCaps="false"
                    android:textSize="15sp"
                    tools:layout_editor_absoluteY="463dp" />

            </RelativeLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageViewPicsShow"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:layout_marginStart="5dp"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/hp_room1" />


            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginBottom="24dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

       <!-- <android.support.design.widget.FloatingActionButton
            android:id="@+id/floatActionBtnMenu"
            android:layout_width="56dp"
            android:layout_height="56dp"

            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="26dp"
            android:scaleType="fitCenter"
            android:clickable="true"
            android:focusable="false"
            app:srcCompat="@drawable/menuicon" />-->

    </RelativeLayout>


</android.support.constraint.ConstraintLayout>
