...
                android:layout_centerVertical="true"
                android:layout_gravity="right"
                android:layout_marginEnd="12dp">


                <ImageButton
                    android:id="@+id/plus"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_marginBottom="4dp"
                    android:layout_marginTop="16dp"
                    android:background="#00000000"
                    android:padding="5dp"
...
                    android:padding="2dp"
                    android:paddingStart="7dp"
                    android:text="@string/cardVal"
                    android:textSize="16sp" />

                <ImageButton
                    android:id="@+id/minus"
                    android:layout_width="25dp"
                    android:layout_height="25dp"

                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/countertext"
                    android:layout_marginTop="4dp"
...
